Tracker: Make IsFiltering() IsRefFiltering() or IsTypeAheadFiltering()

Add IsRefFiltering() and IsFiltering() is once again either kind of filtering:
ref or type-ahead.

Use IsRefFiltering() in a few places, otherwise use IsFiltering() to restore
filtering code so that it gets triggered on either kind of filter.

Cleanup widget list better which prevents crashes.

Fixes #19317

Change-Id: I27407ca33e8f2b967975c8a8ef8de83105442bd4